# oidc-utils

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  ReadMe.md
config/: oidc-pam.json  sshd_2fa
dockerfiles/: Dockerfile.opensuse  Dockerfile.ubuntu  start_2fa.sh  start_no2fa.sh
examples/: ssh_connect.py
server_side/: .gitlab-ci.yml  Dockerfile  README.md  build.sh  docker-entrypoint.sh  oidc-pam-test.json  oidc-pam.json  oidc-pam.py  sshd  sshd_2fa  sshd_pam.conf  start_2fa.sh  start_no2fa.sh  update_oidc_config.py
server_side/c/: CMakeLists.txt  auth.c  auth.h  build.sh  config.c  config.h  main.c  oidc-pam.c  run_as_user.c  sshd  sshd_2fa
server_side/c/cjwt/: cjwt.c
server_side/c/cmake/modules/: FindPAM.cmake
server_side/dockerfiles/: Dockerfile  Dockerfile.opensuse  Dockerfile.python  Dockerfile.ubuntu
server_side/python/: oidc-pam.json  oidc-pam.py  oidc_pam.py  sshd  sshd_2fa
src/: CMakeLists.txt  auth.c  auth.h  config.c  config.h  log.c  log.h  oidc-pam.c  run_as_user.c
src/cjwt/: cjwt.h
ssh_client/: test.py
